--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class = "home-content">
             <h1>Hi, I'm<span> Raiyan</span>  </h1>
             <div class = "text-animate">
-                <h3>A Undergraduate Student</h3>
+                <h3>An Undergraduate Student</h3>
                 <!-- <span class = "animate" style="--i:3;"></span> -->
             </div>
-            <p>Hello, I'm Md Saiyem Raiyan. I am a very friendly, communicative, enthusiastic, fun-loving 
-                and optimistic person. Have passion to learn from anything and everything to the table. I 
-                also try to generate new ideas and views. I've gotten my dream subject and want to explore 
-                with it. In the meantime, I want to flourish my hobbies and passions. I always try to show 
-                my talent and creativity through my works and efforts.
+            <p>Hello, I'm Md Saiyem Raiyan. I am a very friendly, communicative, <br> enthusiastic, fun-loving 
+                and optimistic person. Have passion to <br> learn from anything and everything to the table. I 
+                also try to <br> generate new ideas and views. I've gotten my dream <br> subject and want to explore 
+                with it. In the meantime, <br> I want to flourish my hobbies and passions.<br> I always try to show 
+                my talent and creativity <br>through my works and efforts.
             <!-- <span class = "animate" style = "--i:4;"></span> -->
         </p>
                 <div class = "btn-box">
